# hex-othello

./: Cargo.toml  config.toml  readme.md
src/: board.rs  board_index.rs  config.rs  direction.rs  main.rs  pieces.rs  web_client.rs
src/connector/: board_em.rs  ipc.rs  mod.rs
src/strategy/: mod.rs  random.rs
