[package]
name = "othello"
version = "0.1.0"
authors = ["Christian Lowe <christianlowe.cl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0.111", features = ["derive"] }
